src/objects/Field_Order__c.object
<CustomObject>
    <fields>
        <fullName>Service_Wire_Size__c</fullName>
        <label>Service Wire Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>#1/0</fullName>
                </value>
                <value>
                    <fullName>#2</fullName>
                </value>
                <value>
                    <fullName>#3/0</fullName>
                </value>
                <value>
                    <fullName>#4</fullName>
                </value>
                <value>
                    <fullName>#4/0</fullName>
                </value>
                <value>
                    <fullName>#6</fullName>
                </value>
                <value>
                    <fullName>#8</fullName>
                </value>
                <value>
                    <fullName>1000 MCM</fullName>
                </value>
                <value>
                    <fullName>500 MCM</fullName>
                </value>
                <value>
                    <fullName>500 MCM &amp; #4/0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Wire_Type__c</fullName>
        <label>Service Wire Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aerial Alum.,Bundled</fullName>
                </value>
                <value>
                    <fullName>Aerial Alum.,Open</fullName>
                </value>
                <value>
                    <fullName>Aerial CU.,Bundled</fullName>
                </value>
                <value>
                    <fullName>Aerial Coppen,Open</fullName>
                </value>
                <value>
                    <fullName>Under Alum.,Lateral</fullName>
                </value>
                <value>
                    <fullName>Under Copper,Lateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                    <default>true</default>
                    <label>Generated</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Execution</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <formula>Case__r.Service_Address_Street_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <description>Street No</description>
        <formula>Case__r.Service_Address_Street_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <formula>Case__r.Service_Address_Subdivision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subdivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Instructions__c</fullName>
        <description>Instructions for survey FO</description>
        <inlineHelpText>Instructions for survey FO</inlineHelpText>
        <label>Survey Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TLN__c</fullName>
        <label>Service Wire TLN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_No__c</fullName>
        <formula>Case__r.Telephone_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unable_to_Locate_Given_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cannot locate address during inspection</description>
        <inlineHelpText>Cannot locate address during inspection</inlineHelpText>
        <label>Cannot locate address during inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <formula>Case__r.Service_Address_Unit_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrong_SE_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service entrance not in agreed location</description>
        <inlineHelpText>Service entrance not in agreed location</inlineHelpText>
        <label>Service entrance not in agreed location</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Makati_BC</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Creation_Date__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>Resolution_Date__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_name__c</columns>
        <columns>Barangay__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_No__c</columns>
        <columns>Unit_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Responsible_Office__c</field>
            <operation>equals</operation>
            <value>Makati BC</value>
        </filters>
        <label>Makati BC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mandaluyong_BC</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Creation_Date__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>Resolution_Date__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_name__c</columns>
        <columns>Barangay__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_No__c</columns>
        <columns>Unit_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Responsible_Office__c</field>
            <operation>equals</operation>
            <value>Mandaluyong BC</value>
        </filters>
        <label>Mandaluyong BC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Pending_FOs</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Creation_Date__c</columns>
        <columns>Schedule_Date__c</columns>
        <columns>Resolution_Date__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_name__c</columns>
        <columns>Barangay__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_No__c</columns>
        <columns>Unit_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resolution_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>$User</value>
        </filters>
        <label>Pending FOs I created</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FO-{00000000}</displayFormat>
        <label>Field Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Orders</pluralLabel>
    <recordTypes>
        <fullName>CXE_Inspection_FO</fullName>
        <active>true</active>
        <label>Inspection FO</label>
    </recordTypes>
    <recordTypes>
        <fullName>CXE_Meter_Socket_Delivery</fullName>
        <active>true</active>
        <label>Meter Socket Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>CXE_Re_Inspection_FO</fullName>
        <active>true</active>
        <label>Re-Inspection FO</label>
    </recordTypes>
    <recordTypes>
        <fullName>CXE_Survey_FO</fullName>
        <active>true</active>
        <label>Survey FO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Energization_FO</fullName>
        <active>false</active>
        <description>Energization_Field Order</description>
        <label>Energization FO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inspection_FO</fullName>
        <active>true</active>
        <description>Inspection Field Order</description>
        <label>Inspection FO (Click)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meter_Socket_Delivery_FO</fullName>
        <active>true</active>
        <description>Meter Socket Delivery Field Order</description>
        <label>Meter Socket Delivery FO (Click)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_Inspection_FO</fullName>
        <active>true</active>
        <description>Re-inspection Field Order</description>
        <label>Re-Inspection FO (Click)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_FO</fullName>
        <active>true</active>
        <description>Survey Field Order</description>
        <label>Survey FO (Click)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allow_generation_of_Inspection_FO</fullName>
        <active>false</active>
        <description>Allow generation of Inspection FO</description>
        <errorConditionFormula>AND(
  ISNEW()
  , Record_Type__c = &apos;CXE_Inspection_FO&apos;
  , NOT(AND(
    OR(
      ISBLANK(AMC_Service_Package__c)
      , AMC_Service_Package__c = &apos;Documentary Bundle&apos;
      , AMC_Service_Package__c = &apos;Processing Bundle&apos;
    )
    , OR(
      Case_Status__c = &apos;Meter Socket Issued&apos;
      , Case_Status__c = &apos;Meter Socket Delivered&apos;
      , Case_Status__c = &apos;Inspection FO Resolved - Disapproved&apos;
    )
  ))
)</errorConditionFormula>
        <errorMessage>Cannot create &quot;Inspection FO&quot; with this &quot;Case Status&quot; and &quot;AMC Service Package&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_generation_of_RE_Inspection_FO</fullName>
        <active>false</active>
        <description>Allow generation of Inspection FO</description>
        <errorConditionFormula>AND(
  ISNEW()
  , Record_Type__c = &apos;CXE_Re_Inspection_FO&apos;
  , NOT(AND(
    OR(
      ISBLANK(AMC_Service_Package__c)
      , AMC_Service_Package__c = &apos;Documentary Bundle&apos;
      , AMC_Service_Package__c = &apos;Processing Bundle&apos;
    )
    , OR(
      Case_Status__c = &apos;Awaiting Customer Compliance&apos;
      , Case_Status__c = &apos;Re-inspection FO Resolved - Disapproved&apos;
    )
  ))
)</errorConditionFormula>
        <errorMessage>Cannot create &quot;Inspection FO&quot; with this &quot;Case Status&quot; and &quot;AMC Service Package&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Account_Required_FO</fullName>
        <active>true</active>
        <description>This ensures that an account has been created/associated for FOs</description>
        <errorConditionFormula>AND( 
OR(
RecordType.DeveloperName = &quot;CXE_Survey_FO&quot;,
RecordType.DeveloperName = &quot;CXE_Inspection_FO&quot;,
RecordType.DeveloperName = &quot;CXE_Re_Inspection_FO&quot;,
RecordType.DeveloperName = &quot;CXE_Meter_Socket_Delivery&quot;
),
ISBLANK(  Case__r.AccountId ),
OR(
Case__r.RecordType.DeveloperName = &apos;CXE_Recontract_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;CXE_Termination_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;New_Service_Application&apos;
)
)</errorConditionFormula>
        <errorMessage>Please ensure that there is an associated Account on the Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Account_Required_Survey_FO</fullName>
        <active>true</active>
        <description>This ensures that an account has been created prior to Survey FO Generation.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;CXE_Survey_FO&quot;,
Case__r.AccountId = &quot;&quot;, 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;
)</errorConditionFormula>
        <errorMessage>Please ensure that there is an associated Account on the Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Check_Application_Tagged_for_MSD</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
isnew(), OR( 
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;,  
Case__r.RecordType.DeveloperName = &apos;CXE_Recontract_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;New_Service_Application&apos;
) 
,
$RecordType.DeveloperName = &apos;CXE_Meter_Socket_Delivery&apos;,
NOT(AND(Case__r.Meter_Socket_Delivery_Tag__c,
OR(ISPICKVAL(Case__r.Status,&apos;Application Evaluated&apos;),
ISPICKVAL(Case__r.Status,&apos;Meter Socket Not Delivered&apos;)))
)
)</errorConditionFormula>
        <errorMessage>Meter Socket Delivery cannot be created because it is not tagged, &amp; status should be &quot;Application Evaluated&quot; , or &quot;Meter Socket Not Delivered&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Check_Pending_FO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
isnew(),
Case__r.Number_of_Pending_FO__c  &gt; 0, 
OR( 
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;, 
Case__r.RecordType.DeveloperName = &apos;New_Service_Application&apos;, 
Case__r.RecordType.DeveloperName = &apos;CXE_Recontract_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;CXE_Termination_of_Electric_Service&apos;
)
)</errorConditionFormula>
        <errorMessage>There is another FO pending. Cannot create another FO.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Check_Re_Inspection_condition</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Isnew(),
OR( 
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;, 
Case__r.RecordType.DeveloperName = &apos;New_Service_Application&apos;, 
Case__r.RecordType.DeveloperName = &apos;CXE_Recontract_of_Electric_Service&apos;), 

$RecordType.DeveloperName = &apos;CXE_Re_Inspection_FO&apos;,
AND(
text(Case__r.Status)!=&apos;Awaiting Customer Compliance&apos;,
text(Case__r.Status)!=&apos;Re-inspection FO Resolved - Disapproved&apos;
)
)</errorConditionFormula>
        <errorMessage>Not allowed to create Re-Inspection FO due to SA status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_ExecPersonnel_reqd_when_FO_is_exec</fullName>
        <active>true</active>
        <description>Executing Personnel is required when FO is executed.</description>
        <errorConditionFormula>AND (
 OR (Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot;),

OR( 

AND( 
RecordType.DeveloperName = &quot;CXE_Survey_FO&quot;, 
ISBLANK(Executing_Personnel_FO__c),

AND( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Pre_Survey_Result__c, &quot;&quot;)) 
)), 

AND( 
RecordType.DeveloperName = &quot;CXE_Meter_Socket_Delivery&quot;, 
ISBLANK(Executing_Personnel_FO__c),

AND( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Meter_Socket_Delivery__c, &quot;&quot;)) 
)), 

AND( 
RecordType.DeveloperName = &quot;CXE_Inspection_FO&quot;, 
ISBLANK(Executing_Personnel_FO__c),

AND( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Inspection_Result__c, &quot;&quot;)) 
)), 

AND( 
RecordType.DeveloperName = &quot;CXE_Re_Inspection_FO&quot;, 
ISBLANK(Executing_Personnel_FO__c),

AND( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Re_Inspection_Result__c, &quot;&quot;)) 
)) 
 
)
)</errorConditionFormula>
        <errorMessage>Executing Personnel is required when FO is being executed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_FO_Resolution_Validation</fullName>
        <active>true</active>
        <description>When resolving an FO, user shall input all necessary details about Field Order resolution.</description>
        <errorConditionFormula>OR( 

AND( 
RecordType.DeveloperName = &quot;CXE_Survey_FO&quot;, 

OR( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Pre_Survey_Result__c, &quot;&quot;)) 
), 

OR( 
ISBLANK(Resolution_Date__c), 
ISBLANK(Resolution_Remarks__c), 
ISPICKVAL(Pre_Survey_Result__c, &quot;&quot;) 
)), 

AND( 
RecordType.DeveloperName = &quot;CXE_Meter_Socket_Delivery&quot;, 

OR( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Meter_Socket_Delivery__c, &quot;&quot;)) 
), 

OR( 
ISBLANK(Resolution_Date__c), 
ISBLANK(Resolution_Remarks__c), 
ISPICKVAL(Meter_Socket_Delivery__c, &quot;&quot;) 
)), 

AND( 
RecordType.DeveloperName = &quot;CXE_Inspection_FO&quot;, 

OR( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Inspection_Result__c, &quot;&quot;)) 
), 

OR( 
ISBLANK(Resolution_Date__c), 
ISBLANK(Resolution_Remarks__c), 
ISPICKVAL(Inspection_Result__c, &quot;&quot;) 
)), 

AND( 
RecordType.DeveloperName = &quot;CXE_Re_Inspection_FO&quot;, 

OR( 
NOT(ISBLANK(Resolution_Date__c)), 
NOT(ISBLANK(Resolution_Remarks__c)), 
NOT(ISPICKVAL(Re_Inspection_Result__c, &quot;&quot;)) 
), 

OR( 
ISBLANK(Resolution_Date__c), 
ISBLANK(Resolution_Remarks__c), 
ISPICKVAL(Re_Inspection_Result__c, &quot;&quot;) 
)) 
)</errorConditionFormula>
        <errorMessage>Please make sure that FO Resolution Date, FO Resolution Remarks, and FO Result are all populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Fill_Resolution_fields_once_resolved</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
OR (
$RecordType.DeveloperName = &apos;CXE_Inspection_FO&apos;,
$RecordType.DeveloperName = &apos;CXE_Meter_Socket_Delivery&apos;,
$RecordType.DeveloperName = &apos;CXE_Re_Inspection_FO&apos;,
$RecordType.DeveloperName = &apos;CXE_Survey_FO&apos;
),

OR (
ispickval( Pre_Survey_Result__c ,&apos;Feasible&apos;),
ispickval(Pre_Survey_Result__c,&apos;Not Feasible&apos;),
ispickval( Inspection_Result__c ,&apos;Approved&apos;),
ispickval(Inspection_Result__c,&apos;Disapproved&apos;),
ispickval( Meter_Socket_Delivery__c ,&apos;Delivered&apos;),
ispickval(Meter_Socket_Delivery__c,&apos;Not Delivered&apos;),
ispickval( Re_Inspection_Result__c  ,&apos;Approved&apos;),
ispickval(Re_Inspection_Result__c,&apos;Disapproved&apos;)
),

OR 
(
isblank( Resolution_Date__c ),
isblank( Resolution_Remarks__c )
)

)</errorConditionFormula>
        <errorMessage>Resolution Date &amp; Remarks are required once FO  is resolved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Inspection_Disapproved_Issues</fullName>
        <active>true</active>
        <description>Inspection FO Resolved - Disapproved should only be selected if there is at least one issue checked.</description>
        <errorConditionFormula>AND( 
ischanged(    Inspection_Result__c   ), 
ISPICKVAL(Inspection_Result__c  , &quot;Disapproved&quot;), 
$RecordType.DeveloperName = &apos;CXE_Inspection_FO&apos;,
OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot; 
), 
   Ready_for_Connection__c   = FALSE,
   SE_Not_Compliant__c   = FALSE,
   SE_Not_Installed_Yet__c  = FALSE,
   Wrong_SE_Location__c   = FALSE
)</errorConditionFormula>
        <errorMessage>Please check at least one finding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Inspection_FO_Approved_Req_Fields</fullName>
        <active>true</active>
        <description>Below fields shall be required upon tagging of Inspection FO as approved:
TLN
Pole Code
Service Wire Type
Service Wire Length
Service Wire Size
Material
Metering Scheme
Mode of Retrieval</description>
        <errorConditionFormula>AND (

RecordType.DeveloperName = &quot;CXE_Inspection_FO&quot;, 

ISPICKVAL(Inspection_Result__c,&quot;Approved&quot;),

OR(
ISBLANK(TLN__c),
ISBLANK(Pole_Code__c),
ISPICKVAL(Service_Wire_Type__c, &quot;&quot;), 
ISBLANK(Service_Wire_Length__c),  
ISPICKVAL(Service_Wire_Size__c, &quot;&quot;),
ISPICKVAL(Material__c, &quot;&quot;),
ISPICKVAL(Metering_Scheme__c, &quot;&quot;),
ISPICKVAL(Mode_of_Retrieval__c, &quot;&quot;)
   
))</errorConditionFormula>
        <errorMessage>Please make sure that you have filled up the TLN, Pole Code, Service Wire Type, Service Wire Length, Service Wire Size, Material, Metering Scheme, and Mode of Retrieval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Inspection_Generated_Service_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
isnew(), 
$RecordType.DeveloperName = &apos;CXE_Inspection_FO&apos;, 
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;, 

NOT(INCLUDES(Case__r.CXE_Service_Request_s__c, &quot;Relocation&quot;)), 
NOT(INCLUDES (Case__r.CXE_Service_Request_s__c, &quot;Remodel&quot;))


)</errorConditionFormula>
        <errorMessage>Service Request Type should either be Relocation or Remodel</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Inspection_Resolved_Only_If_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
not(isnew()), 
OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;)
,

OR(
ispickval( Inspection_Result__c ,&apos;Approved&apos;), 
ispickval(Inspection_Result__c,&apos;Disapproved&apos;)
) ,
not(ispickval( Case__r.Status  ,&apos;Inspection FO Scheduled&apos;))

)</errorConditionFormula>
        <errorMessage>You can&apos;t resolve FO unless current SA status is &quot;Inspection FO Scheduled&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Inspection_ServicePackage</fullName>
        <active>true</active>
        <description>For Cases having AMC, allow generation of Inspection FO if Service Package is either
1.       CFEI Only (Documentary Bundle)
OR
2.       Processing Only (Processing Bundle)</description>
        <errorConditionFormula>AND(ISNEW(), 
OR(
Case__r.RecordType.DeveloperName = &apos;CXE_Recontract_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;,
Case__r.RecordType.DeveloperName = &apos;New_Service_Application&apos;
),

$RecordType.DeveloperName = &apos;CXE_Inspection_FO&apos;,  

OR(ISPICKVAL(Case__r.AMC_Service_Package__c, &apos;Full Bundle&apos;),
ISPICKVAL(Case__r.AMC_Service_Package__c, &apos;Technical Bundle&apos;) )
)</errorConditionFormula>
        <errorMessage>AMC Service Package should be None, &apos;Documentary Bundle&apos; or &apos;Processing Bundle&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Inspection_generation_restriction</fullName>
        <active>true</active>
        <description>Inspection generation is only allowed if service application status status is either &quot;Meter Socket Issued&quot;, &quot;Meter Socket Delivered&quot; Or &quot;Inspection FO Resolved-Disapproved&quot;.</description>
        <errorConditionFormula>AND( 
isnew(), 
$RecordType.DeveloperName = &apos;CXE_Inspection_FO&apos;, 
 
OR( 
Case__r.RecordType.DeveloperName = &apos;CXE_Modification_of_Electric_Service&apos;, 
Case__r.RecordType.DeveloperName = &apos;New_Service_Application&apos;, 
Case__r.RecordType.DeveloperName = &apos;CXE_Recontract_of_Electric_Service&apos;), 
 
not(ispickval(Case__r.Status,&apos;Meter Socket Still Installed Onsite&apos;)),
not(ispickval(Case__r.Status,&apos;Meter Socket Issued&apos;)),
not(ispickval(Case__r.Status,&apos;Meter Socket Delivered&apos;)), 
not(ispickval(Case__r.Status,&apos;Inspection FO Resolved - Disapproved&apos;)) 
)</errorConditionFormula>
        <errorMessage>Case status should either be &apos;Meter Socket Issued&apos;, &apos;Meter Socket Delivered&apos;, &apos;Meter Socket Still Installed Onsite&apos; or &apos;Inspection FO Resolved - Disapproved&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Meter_Del_Only_If_Scheduled</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
not(isnew()), 
OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;) 
,

OR(
ispickval( Meter_Socket_Delivery__c ,&apos;Delivered&apos;), 
ispickval(Meter_Socket_Delivery__c,&apos;Not Delivered&apos;) 
) ,
not(ispickval( Case__r.Status  ,&apos;Meter Socket Delivery FO Scheduled&apos;))

)</errorConditionFormula>
        <errorMessage>You can&apos;t resolve FO unless current SA status is &quot;Meter Socket Delivery FO Scheduled&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Meter_Socket_Delivery_Tag_R2</fullName>
        <active>true</active>
        <description>&quot;Meter Socket Delivery?&quot; tag should be ticked.</description>
        <errorConditionFormula>AND( 
$RecordType.DeveloperName = &apos;CXE_Meter_Socket_Delivery&apos;, 

OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot; 
), 

Case__r.Meter_Socket_Delivery_Tag__c = FALSE 

)</errorConditionFormula>
        <errorMessage>&quot;Meter Socket Delivery?&quot; tag should be ticked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Meter_Socket_Not_Delivered_Issues</fullName>
        <active>true</active>
        <description>Meter Socket Not Delivered should only be selected if there is at least one issue checked.</description>
        <errorConditionFormula>AND( 
ischanged(   Meter_Socket_Delivery__c   ), 
ISPICKVAL(Meter_Socket_Delivery__c , &quot;Not Delivered&quot;), 
$RecordType.DeveloperName = &apos;CXE_Meter_Socket_Delivery&apos;,
OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot; 
), 
  SE_Completion_Target_Negotiated__c  = FALSE,
  Delivery_for_Reschedule__c  = FALSE,
  Contact_Person_Unreachable__c  = FALSE,
  For_BC_Pickup__c  = FALSE
)</errorConditionFormula>
        <errorMessage>Please check at least one finding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Meter_Socket_generation_restriction</fullName>
        <active>true</active>
        <description>Meter Socket Delivery generation is only allowed if service application status is either &quot;Application Evaluated&quot; Or &quot;Meter Socket Not Delivered&quot; and Meter Socket Delivery tag is checked</description>
        <errorConditionFormula>AND( 
isnew(),
$RecordType.DeveloperName = &apos;CXE_Meter_Socket_Delivery&apos;, 

OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot; 
), 

AND( 
not(ispickval(Case__r.Status,&apos;Application Evaluated&apos;)), 
not(ispickval(Case__r.Status,&apos;Meter Socket Not Delivered&apos;)) 
) 

)</errorConditionFormula>
        <errorMessage>Meter Socket Delivery FO generation is only allowed if service application status is either &quot;Application Evaluated&quot; Or &quot;Meter Socket Not Delivered&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_New_FO_Executing_Personnel</fullName>
        <active>true</active>
        <description>This ensures that users will not be able to select an Executing Personnel for a newly created Field Order.</description>
        <errorConditionFormula>AND(
ISNEW(),
NOT(ISBLANK(Executing_Personnel_FO__c)) 
)</errorConditionFormula>
        <errorMessage>You cannot assign a Field Order to a personnel upon creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Pre_Survey_Not_Required_R2</fullName>
        <active>false</active>
        <description>Pre-survey FO Not Required is only allowed if service application status is Pre-Survey FO Generated</description>
        <errorConditionFormula>AND(
ischanged( Status__c ),
ISPICKVAL(Status__c, &quot;Not Required&quot;),
$RecordType.DeveloperName = &apos;CXE_Survey_FO&apos;, 
OR(
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot;
),
 
not(ispickval(Case__r.Status,&apos;Pre-Survey FO Generated&apos;))
)</errorConditionFormula>
        <errorDisplayField>Account_Name_text__c</errorDisplayField>
        <errorMessage>Pre-survey FO Not Required is only allowed if service application status is Pre-Survey FO Generated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Pre_Survey_Resolved_Only_If_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
not(isnew()), 
OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot; 
)
,

OR(
ispickval( Pre_Survey_Result__c ,&apos;Feasible&apos;), 
ispickval(Pre_Survey_Result__c,&apos;Not Feasible&apos;)
) ,
not(ispickval( Case__r.Status  ,&apos;Pre-Survey FO Scheduled&apos;))

)</errorConditionFormula>
        <errorMessage>You can&apos;t resolve FO unless current SA status is &quot;Pre-Survey FO Scheduled&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Pre_Survey_generation_restriction</fullName>
        <active>true</active>
        <description>Pre-survey FO generation is only allowed if service application status is either &quot;Application Validated&quot; Or &quot;Pre-survey FO Resolved - Not Feasible&quot;.</description>
        <errorConditionFormula>AND(
isnew(),
$RecordType.DeveloperName = &apos;CXE_Survey_FO&apos;, 
OR(
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;,
Case__r.RecordType.DeveloperName = &quot;CXE_Termination_of_Electric_Service&quot;
),


not(ispickval(Case__r.Status,&apos;Application Validated&apos;)), 
not(ispickval(Case__r.Status,&apos;Pre-Survey FO Resolved - Not Feasible&apos;))
)</errorConditionFormula>
        <errorMessage>Pre-survey FO generation is only allowed if service application status is either &quot;Application Validated&quot; Or &quot;Pre-survey FO Resolved - Not Feasible&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_RE_Inspection_Resolved_Only_If_Sched</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
Case__r.RecordType.DeveloperName = &quot;New_Service_Application&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Modification_of_Electric_Service&quot;, 
Case__r.RecordType.DeveloperName = &quot;CXE_Recontract_of_Electric_Service&quot;) 
,

not(isnew()),
OR(
ispickval( Re_Inspection_Result__c ,&apos;Approved&apos;), 
ispickval(Re_Inspection_Result__c,&apos;Disapproved&apos;) 
) ,
not(ispickval( Case__r.Status  ,&apos;Re-inspection FO Scheduled&apos;))

)</errorConditionFormula>
        <errorMessage>You can&apos;t resolve FO unless current SA status is &quot;Re-inspection FO Scheduled&quot;</errorMessage>
    </validationRules>
</CustomObject>